components/Button/Button.css
%shaped-button {
  color: $white-light;
  background-color: $black-dark;

  &:not(.is-loading):not(:disabled):hover {
    background-color: $black-light;
  }

  &.is-ghost {
    color: $black-dark;
    background-color: transparent;
    border: 1px solid $black-dark;

    &:hover {
      color: $white-light;
      background-color: $black-dark;
    }
  }

  &.is-loading {
    color: transparent;
    cursor: wait;
    transition: none;
  }
}

%unshaped-button {
  padding: 0;
  color: $black-dark;
  background-color: transparent;
  border: 0;

  &:not(:disabled):hover {
    color: $black-light;
  }
}

.ztopia-button {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 0;
  outline: none;
  cursor: pointer;
  transition: $transition-fast;

  &:disabled {
    cursor: not-allowed;
    opacity: 0.6;
  }

  &__loader {
    position: absolute;
  }

  /*============================
  =            Size            =
  ============================*/
  &--small {
    padding: $spacing-xs $spacing-s;
  }

  &--medium {
    padding: $spacing-s $spacing-l;
  }

  &--large {
    padding: $spacing-m 30px;
  }
  /*=====  End of Size  ======*/

  /*===============================
  =            Variant            =
  ===============================*/
  &--rect {
    @extend %shaped-button;

    border-radius: 0;
  }

  &--circle {
    @extend %shaped-button;

    border-radius: 100%;
  }

  &--pill {
    @extend %shaped-button;

    border-radius: 100px;
  }

  &--text {
    @extend %unshaped-button;
  }

  &--icon {
    @extend %unshaped-button;
  }
  /*=====  End of Variant  ======*/
}

